profile page - styling - improved styling to avoid overflow issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,7 +237,7 @@ nav .brand-logo i.material-icons {
 }
 
 .recipe-panel:hover {
-    transform: scale(1.05);
+    transform: scale(1.015);
 }
 
 .recipe-title-link a {
